fix(Checkbox): reset paragraph spacing in markdown labels

--- a/src/Checkbox/index.scss
+++ b/src/Checkbox/index.scss
@@ -9,6 +9,13 @@
   margin-top: var(--space-default);
 }
 
+// reset paragraph spacing in markdown labels
+.nds-checkbox-label p {
+  margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 .nds-checkbox {
   cursor: pointer;
   font-size: var(--font-size-default);
@@ -97,9 +104,6 @@
 
   .nds-checkbox-label {
     flex-grow: 1;
-    p {
-      margin: 0;
-    }
   }
 
   .narmi-icon-check {
